WebCore:

Reviewed by Simon Fraser.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18445
          <rdar://problem/5931174> Assertion failure in CSSGradientValue::image
          with -webkit-gradient as body's background

        Test: fast/backgrounds/body-generated-image-propagated-to-root.html

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::paintFillLayerExtended): Check if this
        is the root element painting a background layer propagated from the
        body, and if it is, use the body's renderer as the client to
        StyleImage::image().

LayoutTests:

        Reviewed by Simon Fraser.

        - test for https://bugs.webkit.org/show_bug.cgi?id=18445
          <rdar://problem/5931174> Assertion failure in CSSGradientValue::image
          with -webkit-gradient as body's background

        * fast/backgrounds/body-generated-image-propagated-to-root.html: Added.
        * platform/mac/fast/backgrounds/body-generated-image-propagated-to-root-expected.checksum: Added.
        * platform/mac/fast/backgrounds/body-generated-image-propagated-to-root-expected.png: Added.
        * platform/mac/fast/backgrounds/body-generated-image-propagated-to-root-expected.txt: Added.



Canonical link: https://commits.webkit.org/36121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44285 268f45cc-cd09-0410-ab3c-d52691b4dbfc